kubernetes/apps/threatmap/app/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threatmap-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: threatmap-frontend
  template:
    metadata:
      labels:
        app: threatmap-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/marmila/threatmap-frontend:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: threatmap-frontend
spec:
  selector:
    app: threatmap-frontend
  ports:
    - port: 80
      targetPort: 80
