kubernetes/apps/threatmap/app/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: threatmap
spec:
  hostnames:
    - threatmap.${CLUSTER_DOMAIN}
  parentRefs:
    - name: public-gateway
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /ws
      backendRefs:
        - name: threatmap-backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: threatmap-frontend
          port: 80
